Fix : vaildation Logic, CSS overflow scroll

--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -772,4 +772,10 @@ select {
   justify-content: center;
   border-left: 1px solid #DFDFDF;
 }
+.ofhover {
+  overflow: auto;
+}
 
+.ofhover::-webkit-scrollbar {
+  margin-bottom: 3%;
+}
